按spring-boot简化配置，已完成兼容